--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Who df is mhood556 - EP" />
     <meta property="og:description" content="Who df is mhood556 - EP out now. Stream everywhere." />
-    <meta property="og:image" content="https://yourdomain.com/social-preview.png" />
-    <meta property="og:url" content="https://yourdomain.com" />
+    <meta property="og:image" content="https://whodfismhood556.netlify.app/social-preview.png" />
+    <meta property="og:url" content="https://whodfismhood556.netlify.app/" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Who df is mhood556 - EP" />
     <meta name="twitter:description" content="Who df is mhood556 - EP out now. Stream everywhere." />
-    <meta name="twitter:image" content="https://yourdomain.com/social-preview.png" />
+    <meta name="twitter:image" content="https://whodfismhood556.netlify.app/social-preview.png" />
   </head>
   <body>
     <div id="root"></div>
